--- a/website/user-guide/demo-codes/Interactive_python.html
+++ b/website/user-guide/demo-codes/Interactive_python.html
@@ -1,4 +1,4 @@
-<!-- Generator: GNU source-highlight 3.1.5
+<!-- Generator: GNU source-highlight 3.1.8
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
@@ -24,8 +24,8 @@ xyz_orig <font color="#990000">=</font> np<font color="#990000">.</font><b><font
 ncxyz <font color="#990000">=</font> np<font color="#990000">.</font><b><font color="#000000">array</font></b><font color="#990000">([</font><font color="#993399">16</font><font color="#990000">,</font> <font color="#993399">6</font><font color="#990000">,</font> <font color="#993399">16</font><font color="#990000">],</font> order<font color="#990000">=</font><font color="#FF0000">'F'</font><font color="#990000">,</font> dtype<font color="#990000">=</font>np<font color="#990000">.</font>int32<font color="#990000">)</font>
 
 <b><font color="#0000FF">if</font></b> <font color="#990000">(</font>nprocs_realm <font color="#990000">!=</font> NProcs<font color="#990000">):</font>
-    <b><font color="#0000FF">print</font></b><font color="#990000">(</font><font color="#FF0000">"Non-coherent number of processes in CFD "</font><font color="#990000">,</font> nprocs_realm<font color="#990000">,</font>
-            <font color="#FF0000">" no equal to "</font><font color="#990000">,</font>  npxyz<font color="#990000">[</font><font color="#993399">0</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">1</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">2</font><font color="#990000">])</font>
+    <b><font color="#0000FF">print</font></b><font color="#990000">((</font><font color="#FF0000">"Non-coherent number of processes in CFD "</font><font color="#990000">,</font> nprocs_realm<font color="#990000">,</font>
+            <font color="#FF0000">" no equal to "</font><font color="#990000">,</font>  npxyz<font color="#990000">[</font><font color="#993399">0</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">1</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">2</font><font color="#990000">]))</font>
     MPI<font color="#990000">.</font><b><font color="#000000">Abort</font></b><font color="#990000">(</font>errorcode<font color="#990000">=</font><font color="#993399">1</font><font color="#990000">)</font>
 
 <i><font color="#9A1900">#Setup coupled simulation</font></i>
@@ -41,7 +41,7 @@ sfreq <font color="#990000">=</font> <b><font color="#000000">Slider</font></b><
 <b><font color="#0000FF">def</font></b> <b><font color="#000000">update</font></b><font color="#990000">(</font>val<font color="#990000">):</font>
     freq <font color="#990000">=</font> sfreq<font color="#990000">.</font>val
     <b><font color="#0000FF">global</font></b> freq
-    <b><font color="#0000FF">print</font></b><font color="#990000">(</font><font color="#FF0000">"CHANGED"</font><font color="#990000">,</font> freq<font color="#990000">)</font>
+    <b><font color="#0000FF">print</font></b><font color="#990000">((</font><font color="#FF0000">"CHANGED"</font><font color="#990000">,</font> freq<font color="#990000">))</font>
 sfreq<font color="#990000">.</font><b><font color="#000000">on_changed</font></b><font color="#990000">(</font>update<font color="#990000">)</font>
 
 plt<font color="#990000">.</font><b><font color="#000000">ion</font></b><font color="#990000">()</font>
@@ -105,7 +105,7 @@ zoverlap <font color="#990000">=</font> koverlap<font color="#990000">*</font>dz
     ax<font color="#990000">.</font><b><font color="#000000">set_xlabel</font></b><font color="#990000">(</font><font color="#FF0000">'$x$'</font><font color="#990000">)</font>
     ax<font color="#990000">.</font><b><font color="#000000">set_ylabel</font></b><font color="#990000">(</font><font color="#FF0000">'$y$'</font><font color="#990000">)</font>
 
-    <b><font color="#0000FF">print</font></b><font color="#990000">(</font>time<font color="#990000">,</font> freq<font color="#990000">)</font>
+    <b><font color="#0000FF">print</font></b><font color="#990000">((</font>time<font color="#990000">,</font> freq<font color="#990000">))</font>
     plt<font color="#990000">.</font><b><font color="#000000">pause</font></b><font color="#990000">(</font><font color="#993399">0.1</font><font color="#990000">)</font>
     ax<font color="#990000">.</font><b><font color="#000000">cla</font></b><font color="#990000">()</font>
 
