--- a/website/user-guide/demo-codes/cfd_cpl.html
+++ b/website/user-guide/demo-codes/cfd_cpl.html
@@ -1,4 +1,4 @@
-<!-- Generator: GNU source-highlight 3.1.5
+<!-- Generator: GNU source-highlight 3.1.8
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
@@ -24,8 +24,8 @@ xyz_orig <font color="#990000">=</font> np<font color="#990000">.</font><b><font
 ncxyz <font color="#990000">=</font> np<font color="#990000">.</font><b><font color="#000000">array</font></b><font color="#990000">([</font><font color="#993399">8</font><font color="#990000">,</font> <font color="#993399">8</font><font color="#990000">,</font> <font color="#993399">1</font><font color="#990000">],</font> order<font color="#990000">=</font><font color="#FF0000">'F'</font><font color="#990000">,</font> dtype<font color="#990000">=</font>np<font color="#990000">.</font>int32<font color="#990000">)</font>
 
 <b><font color="#0000FF">if</font></b> <font color="#990000">(</font>nprocs_realm <font color="#990000">!=</font> NProcs<font color="#990000">):</font>
-    <b><font color="#0000FF">print</font></b><font color="#990000">(</font><font color="#FF0000">"Non-coherent number of processes in CFD "</font><font color="#990000">,</font> nprocs_realm<font color="#990000">,</font>
-            <font color="#FF0000">" not equal to "</font><font color="#990000">,</font>  npxyz<font color="#990000">[</font><font color="#993399">0</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">1</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">2</font><font color="#990000">])</font>
+    <b><font color="#0000FF">print</font></b><font color="#990000">((</font><font color="#FF0000">"Non-coherent number of processes in CFD "</font><font color="#990000">,</font> nprocs_realm<font color="#990000">,</font>
+            <font color="#FF0000">" not equal to "</font><font color="#990000">,</font>  npxyz<font color="#990000">[</font><font color="#993399">0</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">1</font><font color="#990000">],</font> <font color="#FF0000">" X "</font><font color="#990000">,</font> npxyz<font color="#990000">[</font><font color="#993399">2</font><font color="#990000">]))</font>
     MPI<font color="#990000">.</font><b><font color="#000000">Abort</font></b><font color="#990000">(</font>errorcode<font color="#990000">=</font><font color="#993399">1</font><font color="#990000">)</font>
 
 <i><font color="#9A1900">#Setup coupled simulation</font></i>
@@ -58,7 +58,7 @@ cfd <font color="#990000">=</font> <b><font color="#000000">CFD</font></b><font 
 <i><font color="#9A1900">#Main Run</font></i>
 <b><font color="#0000FF">for</font></b> n<font color="#990000">,</font>t <b><font color="#0000FF">in</font></b> <b><font color="#000000">enumerate</font></b><font color="#990000">(</font>time<font color="#990000">):</font>
 
-    <b><font color="#0000FF">print</font></b><font color="#990000">(</font><font color="#FF0000">"CFD time = "</font><font color="#990000">,</font> n<font color="#990000">,</font>t<font color="#990000">)</font>
+    <b><font color="#0000FF">print</font></b><font color="#990000">((</font><font color="#FF0000">"CFD time = "</font><font color="#990000">,</font> n<font color="#990000">,</font>t<font color="#990000">))</font>
 
     <i><font color="#9A1900">#===============================================</font></i>
     <i><font color="#9A1900"># Call to CPL-LIBRARY goes here to</font></i>
