--- a/website/user-guide/demo-codes/md_recv_cells_cpp.html
+++ b/website/user-guide/demo-codes/md_recv_cells_cpp.html
@@ -1,4 +1,4 @@
-<!-- Generator: GNU source-highlight 3.1.5
+<!-- Generator: GNU source-highlight 3.1.8
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
@@ -15,7 +15,8 @@ http://www.gnu.org/software/src-highlite -->
 <font color="#009900">int</font> <b><font color="#000000">main</font></b><font color="#990000">()</font> <font color="#FF0000">{</font>
    <b><font color="#000000">MPI_Init</font></b><font color="#990000">(</font>NULL<font color="#990000">,</font> NULL<font color="#990000">);</font> 
 
-   <font color="#009900">int</font> MD_realm <font color="#990000">=</font> <font color="#993399">2</font><font color="#990000">,</font> MD_COMM<font color="#990000">;</font>
+   <font color="#009900">int</font> MD_realm <font color="#990000">=</font> <font color="#993399">2</font><font color="#990000">;</font>
+   <font color="#008080">MPI_Comm</font> MD_COMM<font color="#990000">;</font>
    CPL<font color="#990000">::</font><b><font color="#000000">init</font></b><font color="#990000">(</font>MD_realm<font color="#990000">,</font> MD_COMM<font color="#990000">);</font>
 
    <i><font color="#9A1900">// Parameters of the cpu topology (cartesian grid)</font></i>
@@ -36,7 +37,7 @@ http://www.gnu.org/software/src-highlite -->
    <font color="#009900">int</font> rank<font color="#990000">;</font>
    <b><font color="#000000">MPI_Comm_rank</font></b><font color="#990000">(</font>MD_COMM<font color="#990000">,</font> <font color="#990000">&amp;</font>rank<font color="#990000">);</font>
    <font color="#009900">int</font> periods<font color="#990000">[</font><font color="#993399">3</font><font color="#990000">]</font> <font color="#990000">=</font> <font color="#FF0000">{</font><font color="#993399">1</font><font color="#990000">,</font> <font color="#993399">1</font><font color="#990000">,</font> <font color="#993399">1</font><font color="#FF0000">}</font><font color="#990000">;</font>
-   <font color="#009900">int</font> CART_COMM<font color="#990000">;</font>
+   <font color="#008080">MPI_Comm</font> CART_COMM<font color="#990000">;</font>
    <b><font color="#000000">MPI_Cart_create</font></b><font color="#990000">(</font>MD_COMM<font color="#990000">,</font> <font color="#993399">3</font><font color="#990000">,</font> npxyz<font color="#990000">,</font> periods<font color="#990000">,</font> <b><font color="#0000FF">true</font></b><font color="#990000">,</font> <font color="#990000">&amp;</font>CART_COMM<font color="#990000">);</font>
 
    <i><font color="#9A1900">// Coupler setup</font></i>
