--- a/website/user-guide/demo-codes/md_init_python.html
+++ b/website/user-guide/demo-codes/md_init_python.html
@@ -1,4 +1,4 @@
-<!-- Generator: GNU source-highlight 3.1.5
+<!-- Generator: GNU source-highlight 3.1.8
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
@@ -12,7 +12,7 @@ MD_COMM <font color="#990000">=</font> CPL<font color="#990000">.</font><b><font
 nprocs <font color="#990000">=</font> MD_COMM<font color="#990000">.</font><b><font color="#000000">Get_size</font></b><font color="#990000">()</font>
 rank <font color="#990000">=</font> MD_COMM<font color="#990000">.</font><b><font color="#000000">Get_rank</font></b><font color="#990000">()</font>
 
-<b><font color="#0000FF">print</font></b><font color="#990000">(</font><font color="#FF0000">"MD code processor "</font><font color="#990000">+</font> <b><font color="#000000">str</font></b><font color="#990000">(</font>rank<font color="#990000">+</font><font color="#993399">1</font><font color="#990000">)</font> <font color="#990000">+</font> <font color="#FF0000">" of "</font> <font color="#990000">+</font> <b><font color="#000000">str</font></b><font color="#990000">(</font>nprocs<font color="#990000">))</font>
+<b><font color="#0000FF">print</font></b><font color="#990000">((</font><font color="#FF0000">"MD code processor "</font><font color="#990000">+</font> <b><font color="#000000">str</font></b><font color="#990000">(</font>rank<font color="#990000">+</font><font color="#993399">1</font><font color="#990000">)</font> <font color="#990000">+</font> <font color="#FF0000">" of "</font> <font color="#990000">+</font> <b><font color="#000000">str</font></b><font color="#990000">(</font>nprocs<font color="#990000">)))</font>
 
 CPL<font color="#990000">.</font><b><font color="#000000">finalize</font></b><font color="#990000">()</font>
 MPI<font color="#990000">.</font><b><font color="#000000">Finalize</font></b><font color="#990000">()</font>
