--- a/website/user-guide/demo-codes/minimal_CFD.html
+++ b/website/user-guide/demo-codes/minimal_CFD.html
@@ -1,4 +1,4 @@
-<!-- Generator: GNU source-highlight 3.1.5
+<!-- Generator: GNU source-highlight 3.1.8
 by Lorenzo Bettini
 http://www.lorenzobettini.it
 http://www.gnu.org/software/src-highlite -->
@@ -16,7 +16,7 @@ recv_array<font color="#990000">,</font> send_array <font color="#990000">=</fon
 <b><font color="#0000FF">for</font></b> time <b><font color="#0000FF">in</font></b> <b><font color="#000000">range</font></b><font color="#990000">(</font><font color="#993399">5</font><font color="#990000">):</font>
 
     recv_array<font color="#990000">,</font> ierr <font color="#990000">=</font> CPL<font color="#990000">.</font><b><font color="#000000">recv</font></b><font color="#990000">(</font>recv_array<font color="#990000">)</font>
-    <b><font color="#0000FF">print</font></b><font color="#990000">(</font><font color="#FF0000">"CFD"</font><font color="#990000">,</font> time<font color="#990000">,</font> recv_array<font color="#990000">[</font><font color="#993399">0</font><font color="#990000">,</font><font color="#993399">0</font><font color="#990000">,</font><font color="#993399">0</font><font color="#990000">,</font><font color="#993399">0</font><font color="#990000">])</font>
+    <b><font color="#0000FF">print</font></b><font color="#990000">((</font><font color="#FF0000">"CFD"</font><font color="#990000">,</font> time<font color="#990000">,</font> recv_array<font color="#990000">[</font><font color="#993399">0</font><font color="#990000">,</font><font color="#993399">0</font><font color="#990000">,</font><font color="#993399">0</font><font color="#990000">,</font><font color="#993399">0</font><font color="#990000">]))</font>
     send_array<font color="#990000">[</font><font color="#993399">0</font><font color="#990000">,:,:,:]</font> <font color="#990000">=</font> <font color="#993399">2</font><font color="#990000">.*</font>time
     CPL<font color="#990000">.</font><b><font color="#000000">send</font></b><font color="#990000">(</font>send_array<font color="#990000">)</font>
 
